# kol-torah-application

app/api/: .dockerignore  .env.development  .env.example  .env.production  .gitignore  Dockerfile  main.py  pyproject.toml
app/web/: .env.example  .env.production  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/web/src/: App.tsx  config.ts
app/web/src/components/: LanguageSwitcher.tsx  Layout.tsx  MDXContent.tsx  TopBar.tsx
app/web/src/content/: README.md
app/web/src/content/home/: en.mdx  he.mdx
app/web/src/i18n/: config.ts
app/web/src/lib/: content-loader.ts
